--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Karigor logo new png.png" />
+    <meta name="description" content="Karigor Digital Ltd - Providing innovative technology solutions and digital services" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Replication</title>
+    <title>Karigor Digital Ltd - Innovative Tech Solutions</title>
   </head>
   <body>
     <div id="root"></div>
